--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "datauri": "^4.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1",
+    "mongoose": "6.10.1",
     "multer": "^1.4.5-lts.1"
   }
 }
