Resolve issue regarding to env and db.js

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Application Specific Stuff
-SERVER = http://localhost
-PORT = 10000
+SERVER = 
+PORT = 
 VERSION = 'v1'
 
 # Database Specific Stuff
